Setting up the environment

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,10 +3,15 @@
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
+
 <body>
+  
   Enter a URL here:
-  <form method="POST">
+  <!-- 1. create action attribute -->
+  <form action="http://127.0.0.1:8080/web-historian" method="POST" >
     <input type="input" name="url"></input>
   </form>
+
 </body>
+
 </html>
