Able to render index.html, but don't pass the test

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -8,7 +8,7 @@
   
   Enter a URL here:
   <!-- 1. create action attribute -->
-  <form action="http://127.0.0.1:8080/web-historian" method="POST" >
+  <form method="POST" >
     <input type="input" name="url"></input>
   </form>
 
